scss/components/hero/_news-style-hero.scss
.no-left-padding {

  padding-left: 0;
}
/* -------------------------------- 

Slider Hero

-------------------------------- */
.sbu-hero {
  position: relative;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

}

h2.sbu-hero-title {

  margin: 0;
}


.sbu-hero-slider {
  position: relative;
  height: 75vh;
}

.sbu-hero-slider-img {

  @extend .img-responsive;
  right: 0px;

}

.sbu-hero-slider li {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  -webkit-transform: translateX(100%);
  -moz-transform: translateX(100%);
  -ms-transform: translateX(100%);
  -o-transform: translateX(100%);
  transform: translateX(100%);
}
.sbu-hero-slider li.selected {
  /* this is the visible slide */
  position: relative;
  -webkit-transform: translateX(0);
  -moz-transform: translateX(0);
  -ms-transform: translateX(0);
  -o-transform: translateX(0);
  transform: translateX(0);
}
.sbu-hero-slider li.move-left {
  /* slide hidden on the left */
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  -o-transform: translateX(-100%);
  transform: translateX(-100%);
}
.sbu-hero-slider li.is-moving, .sbu-hero-slider li.selected {
  /* the is-moving class is assigned to the slide which is moving outside the viewport */
  -webkit-transition: -webkit-transform 0.5s;
  -moz-transition: -moz-transform 0.5s;
  transition: transform 0.5s;
}

@media only screen and (max-width: 960px) {

.sbu-hero-content { 
  display: none;
}
.sbu-hero-slider-img {
  margin-bottom: 20px;
}

}

/* -------------------------------- 

Single slide style

-------------------------------- */
.sbu-hero-slider li {
  background-position: center center;
  background-size: cover;
  background-repeat: no-repeat;
}

.sbu-hero-slider .sbu-full-width,
.sbu-hero-slider .sbu-half-width {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
  left: 0;
  top: 0;
  /* this padding is used to align the text */
  text-align: left;
  /* Force Hardware Acceleration in WebKit */
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  -webkit-transform: translateZ(0);
  -moz-transform: translateZ(0);
  -ms-transform: translateZ(0);
  -o-transform: translateZ(0);
  transform: translateZ(0);
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
    -ms-flex-align: center;
    -webkit-align-items: center;
    -webkit-box-align: center;
    align-items: center;
  justify-content: center;
}
.sbu-hero-slider .sbu-img-container {
  /* hide image on mobile device */
  display: none;
}
.sbu-hero-slider .sbu-img-container img {
  position: absolute;
  left: 50%;
  top: 50%;
  bottom: auto;
  right: auto;
  -webkit-transform: translateX(-50%) translateY(-50%);
  -moz-transform: translateX(-50%) translateY(-50%);
  -ms-transform: translateX(-50%) translateY(-50%);
  -o-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
}
.sbu-hero-slider .sbu-bg-video-wrapper {
  /* hide video on mobile device */
  display: none;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
}
.sbu-hero-slider .sbu-bg-video-wrapper video {
  /* you won't see this element in the html, but it will be injected using js */
  display: block;
  min-height: 100%;
  min-width: 100%;
  max-width: none;
  height: auto;
  width: auto;
  position: absolute;
  left: 50%;
  top: 50%;
  bottom: auto;
  right: auto;
  -webkit-transform: translateX(-50%) translateY(-50%);
  -moz-transform: translateX(-50%) translateY(-50%);
  -ms-transform: translateX(-50%) translateY(-50%);
  -o-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
}
.sbu-hero-slider h2, .sbu-hero-slider p {
  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
  line-height: 1.2;
  color: #ffffff;
}
.sbu-hero-slider h2 {
  font-size: 2.4rem;
}
.sbu-hero-slider p {
  font-size: 1.4rem;
  line-height: 1.4;
}
.sbu-hero-slider .sbu-btn {
  display: inline-block;
  padding: 1.2em 1.4em;
  margin-top: .8em;
  background-color: rgba(151, 0, 0, 1);
  font-size: 1.3rem;
  font-weight: 700;
  letter-spacing: 1px;
  color: #ffffff;
  text-transform: uppercase;
  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
  -webkit-transition: background-color 0.2s;
  -moz-transition: background-color 0.2s;
  transition: background-color 0.2s;
}
.sbu-hero-slider .sbu-btn.secondary {
  background-color: rgba(22, 26, 30, 0.8);
}
.sbu-hero-slider .sbu-btn:nth-of-type(2) {
  margin-left: 1em;
}
.no-touch .sbu-hero-slider .sbu-btn:hover {
  background-color: rgba(188  ,0,0,1);
}
.no-touch .sbu-hero-slider .sbu-btn.secondary:hover {
  background-color: #161a1e;
}
@media only screen and (min-width: 768px) {
  
  .sbu-hero-slider .sbu-full-width,
  .sbu-hero-slider .sbu-half-width {
    padding-top: 0px;
  }
  .sbu-hero-slider .sbu-bg-video-wrapper {
    display: block;
  }
  .sbu-hero-slider .sbu-half-width {
    width: 45%;
  }
  .sbu-hero-slider .sbu-half-width:first-of-type {
    left: 5%;
  }
  .sbu-hero-slider .sbu-half-width:nth-of-type(2) {
    right: 5%;
    left: auto;
  }
  .sbu-hero-slider .sbu-img-container {
    display: block;
  }

  .sbu-hero-slider h2 {
    font-size: 2.4em;
    font-weight: 300;
  }
  .sbu-hero-slider .sbu-btn {
    font-size: 1.4rem;
  }
}
@media only screen and (min-width: 1170px) {
  .sbu-hero-slider .sbu-full-width,
  .sbu-hero-slider .sbu-half-width {
    padding-top: 0px;
  }
  .sbu-hero-slider h2, .sbu-hero-slider p {
    margin-bottom: 20px;
  }
  .sbu-hero-slider h2 {
    font-size: 3.2em;
  }
  .sbu-hero-slider p {
    font-size: 1.6rem;
  }
}
/* ... */

